--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
 				</nav>
 			</div>
 		</header>
+		<!-- MAIN-CONTANT -->
+		<main class="main-content">
+			<div class="hero">
+				<div class="container hero-container">
+					<h1 class="hero__title">This is Velocity</h1>
+					<div class="hero__btn-wrapper">
+						<button class="btn-bg">sign up</button>
+						<button class="btn">Learn more</button>
+					</div>
+				</div>
+			</div>
+		</main>
 	</body>
 </html>
